Upgraded Manifest to V3

--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-	"manifest_version": 2,
+	"manifest_version": 3,
 	"version": "1.0",
 	"name": "Sitecore - Scrape & Migrate",
 	"short_name": "Scrape & Migrate",
@@ -11,19 +11,17 @@
 		"128": "assets/images/icon128.png"
 	},
 	"options_ui": {
-		"page": "options/options.html",
-		"chrome_style": false
+		"page": "options/options.html"
 	},
-	"browser_action": {
+	"action": {
 		"default_popup": "options/options.html",
 		"default_title": "Sitecore - Scrape & Migrate (options)",
 		"default_icon": "assets/images/icon38.png"
 	},
 	"devtools_page": "devtools/devtools_page.html",
-	"content_security_policy": "script-src 'self' https://stackpath.bootstrapcdn.com https://cdnjs.cloudflare.com https://ajax.googleapis.com; object-src 'self'",
-	"web_accessible_resources": [
-		"assets/*"
-	],
+	"content_security_policy": {
+		"extension_pages": "script-src 'self'; object-src 'self'"
+	},
 	"content_scripts": [
 		{
 			"matches": ["*://*/*"],
