--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
 	"version": "1.0",
 	"name": "Web Harvester for Sitecore",
 	"short_name": "Web Harvester",
-	"description": "Tool to extract data from websites and import to Sitecore",
+	"description": "Tool to harvest and import any website's content into Sitecore",
 	"permissions": ["activeTab", "tabs", "storage"],
 	"icons": {
 		"16": "assets/images/icon16.png",
@@ -16,7 +16,7 @@
 	"action": {
 		"default_popup": "options/options.html",
 		"default_title": "Web Harvester for Sitecore (options)",
-		"default_icon": "assets/images/icon48.png"
+		"default_icon": "assets/images/action-icon.png"
 	},
 	"devtools_page": "devtools/devtools_page.html",
 	"content_security_policy": {
